test/Feature/Output/srem.c.tmp.klee-out/test000001.div.err
Error: divide by zero
File: /home/sanghu/TracerX/tracerx/test/Feature/srem.c
Line: 19
assembly.ll line: 44
Stack: 
	#000000185 in klee_div_zero_check (z) at /home/sanghu/TracerX/tracerx/runtime/Intrinsic/klee_div_zero_check.c:14
	#100000044 in main (argc=1, argv=60099872) at /home/sanghu/TracerX/tracerx/test/Feature/srem.c:19
