test/Feature/Output/srem.c.tmp.klee-out/test000001.pc
array y[4] : w32 -> w8 = symbolic
(query [(Eq 0
             (ReadLSB w32 0 y))]
        false)
